# Trinity-Engine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  Roadmap.md
Client/: CMakeLists.txt
Client/src/Client/: Client.cpp  ClientLayer.cpp  ClientLayer.h
Client/src/Client/Camera/: EditorCamera.cpp  EditorCamera.h
Engine/: CMakeLists.txt
Engine/Assets/Shaders/: Simple.frag  Simple.vert
Engine/src/Engine/Application/: Application.cpp  Application.h
Engine/src/Engine/Core/: EntryPoint.h  Utilities.cpp  Utilities.h
Engine/src/Engine/Events/: ApplicationEvent.h  Event.h  EventBus.h  EventDispatcher.h  EventQueue.h  GamepadEvent.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Engine/src/Engine/Geometry/: Geometry.h
Engine/src/Engine/Input/: Input.cpp  Input.h  InputCodes.h
Engine/src/Engine/Layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Engine/src/Engine/Platform/: Window.cpp  Window.h
Engine/src/Engine/Renderer/: Camera.cpp  Camera.h  DeletionQueue.cpp  DeletionQueue.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.h
Engine/src/Engine/Utilities/: Utilities.cpp  Utilities.h
Trinity-Engine/: CMakeLists.txt
Trinity-Engine/Assets/Shaders/: ColorOutput.glsl  GeometryBuffer.frag  GeometryBuffer.vert  Lighting.frag  PBR.glsl  PostProcess.frag  PostProcess.vert  Shadow.vert  Simple.frag  Simple.vert
Trinity-Engine/Include/Trinity/Assets/: AssetDatabase.h  AssetMetaFile.h  AssetMetadata.h  AssetType.h
Trinity-Engine/Include/Trinity/Audio/: AudioTypes.h
Trinity-Engine/Include/Trinity/Core/: Application.h  Assert.h  Config.h  Engine.h  EntryPoint.h  Event.h  FileManagement.h  Log.h  Timer.h  Timestep.h  UUID.h
Trinity-Engine/Include/Trinity/ImGui/: IImGuiPlatformBackend.h  IImGuiRenderBackend.h  ImGuiLayer.h
Trinity-Engine/Include/Trinity/Platform/: FileSystem.h  Gamepad.h  GamepadCodes.h  IPlatform.h  Input.h  KeyCodes.h  MouseCodes.h  PlatformFactory.h  PlatformTypes.h  Window.h
Trinity-Engine/Include/Trinity/Scene/: Entity.h  Scene.h
Trinity-Engine/Include/Trinity/Serialization/: MaterialSerializer.h  SceneSerializer.h  YAMLUtilities.h
Trinity-Engine/Shaders/: BrdfLut.slang  DepthVisualize.slang  IrradianceConvolve.slang  Mesh.slang  Prefilter.slang  Shadow.slang  Skybox.slang  Tonemap.slang  Triangle.slang  Triangle.vert
Trinity-Engine/Source/Trinity/Assets/: AssetDatabase.cpp  AssetMetaFile.cpp  AssetType.cpp
Trinity-Engine/Source/Trinity/Core/: Application.cpp  Config.cpp  Engine.cpp  FileManagement.cpp  Log.cpp  UUID.cpp
Trinity-Engine/Source/Trinity/ImGui/: ImGuiLayer.cpp
Trinity-Engine/Source/Trinity/Platform/: PlatformFactory.cpp
Trinity-Engine/Source/Trinity/Scene/: Scene.cpp
Trinity-Engine/Source/Trinity/Serialization/: MaterialSerializer.cpp  SceneSerializer.cpp
Trinity-Engine/shaders/source/: deferred_lighting.frag.glsl  deferred_lighting.vert.glsl  geometry_pass.frag.glsl  geometry_pass.vert.glsl  lighting_pass.frag.glsl  lighting_pass.vert.glsl  shadow_pass.frag.glsl  shadow_pass.vert.glsl
Trinity-Engine/src/Trinity/: Version.h  trpch.cpp
Trinity-Engine/src/Trinity/Application/: Application.cpp  Application.h
Trinity-Engine/src/Trinity/Asset/: AssetHandle.h  AssetMetadata.h  AssetRegistry.cpp  AssetRegistry.h
Trinity-Engine/src/Trinity/Assets/: AssetHandle.h  AssetManager.cpp  AssetManager.h  AssetRegistry.cpp  AssetRegistry.h  BuiltInAssets.cpp  BuiltInAssets.h  MeshAsset.cpp  MeshAsset.h
Trinity-Engine/src/Trinity/Camera/: Camera.h  EditorCamera.cpp  EditorCamera.h
Trinity-Engine/src/Trinity/Core/: EntryPoint.h
Trinity-Engine/src/Trinity/ECS/: Components.h  Entity.h  Scene.cpp  Scene.h  SceneRenderer.cpp  SceneRenderer.h  SceneSerializer.cpp  SceneSerializer.h
Trinity-Engine/src/Trinity/Events/: ApplicationEvent.h  Event.h  EventQueue.cpp  EventQueue.h  GamepadEvent.h  KeyEvent.h  MouseEvent.h
Trinity-Engine/src/Trinity/Geometry/: Geometry.h  Mesh.cpp  Mesh.h  Vertex.h
Trinity-Engine/src/Trinity/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h  ImGuiTheme.cpp  ImGuiTheme.h
Trinity-Engine/src/Trinity/Input/: Input.cpp  Input.h  InputCodes.h
Trinity-Engine/src/Trinity/Layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Trinity-Engine/src/Trinity/Platform/: Window.cpp  Window.h
Trinity-Engine/src/Trinity/Renderer/: Buffer.cpp  Buffer.h  CommandBuffer.h  CommandList.h  ISceneRenderer.cpp  ISceneRenderer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshHandle.h  RenderCommand.cpp  RenderCommand.h  RenderPass.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  RendererFactory.cpp  RendererFactory.h  RendererUtilities.cpp  RendererUtilities.h  SceneRenderer.cpp  SceneRenderer.h  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  Texture.h
Trinity-Engine/src/Trinity/Scene/: Entity.cpp  Entity.h  Entity.inl  Prefab.cpp  Prefab.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h
Trinity-Engine/src/Trinity/Utilities/: FileManagement.cpp  FileManagement.h  Log.cpp  Log.h  Time.cpp  Time.h  Utilities.cpp  Utilities.h  VulkanUtilities.cpp  VulkanUtilities.h
Trinity-Forge/: CMakeLists.txt
Trinity-Forge/Include/Forge/: ForgeApplication.h
Trinity-Forge/Include/Forge/Editor/: CommandHistory.h  EditorContext.h  EditorIcons.h  EditorPanel.h  EditorTheme.h
Trinity-Forge/Source/: ForgeApplication.cpp
Trinity-Forge/Source/Editor/: CommandHistory.cpp  CommandHistory.h  ICommand.h
Trinity-Forge/Source/Editor/Commands/: ComponentCommands.h  EntityCommands.cpp  EntityCommands.h  MeshCommands.h  PropertyCommands.h
Trinity-Forge/Source/Forge/: ForgeApplication.cpp
Trinity-Forge/Source/Forge/Editor/: CommandHistory.cpp  EditorTheme.cpp
Trinity-Forge/src/Forge/: AssetPayload.h  Forge.cpp  ForgeLayer.cpp  ForgeLayer.h  SelectionContext.h
Trinity-Forge/src/Forge/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  InspectorPanel.cpp  Panel.h  (+11 more)
Trinity-Hub/: CMakeLists.txt
Trinity-Runtime/: CMakeLists.txt
Trinity-Runtime/Source/: RuntimeApplication.cpp
Trinity-Server/: CMakeLists.txt
Trinity-Tools/: CMakeLists.txt
(+332 files in other folders)
